# woltka

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: main.yml
ci/: conda_requirements.txt
doc/: align.md  app.md  classify.md  cli.md  collapse.md  coverage.md  faq.md  filter.md  gotu.md  gtdb.md  hierarchy.md  input.md  install.md  kegg.md  merge.md  metacyc.md  normalize.md  ogu.md  ordinal.md  output.md  overview.md  perform.md  qiita.md  refseq.md  stratify.md  wol.md  wolsop.sh
woltk/: classify.py  cli.py  core.py  level.py  ordinal.py  parse.py
woltk/tests/: test_ordinal.py  test_parse.py  test_util.py
woltk/tests/data/function/: orfmap.txt.xz
woltk/tests/data/taxonomy/: g2lineage.txt
woltka/: __init__.py  align.py  biom.py  classify.py  cli.py  config.yml  core.py  cover.py  coverage.py  disambig.py  file.py  gotu.py  ordinal.py  parse.py  range.py  sample.py  table.py  tool.py  tools.py  tree.py  util.py  workflow.py
woltka/q2/: README.md  __init__.py  _format.py  _transformer.py  _type.py  plugin.py  plugin_setup.py
woltka/q2/tests/: test_format.py  test_type.py
woltka/q2/tests/data/: align_b6o.qza  align_map.qza  align_sam.qza  coords.qza  g_to_taxid.qza  gene_to_uniref.qza  nodes.qza  (+5 more)
woltka/tests/: test_align.py  test_biom.py  test_classify.py  test_cli.py  test_core.py  test_coverage.py  test_file.py  test_ordinal.py  test_parse.py  test_range.py  test_sample.py  test_table.py  test_tools.py  test_tree.py  test_util.py  test_workflow.py
woltka/tests/data/: README.md  tree.nwk
(+85 files in other folders)
